# sentiment_analysis

./: 1. sentiment_logreg.ipynb  2. sentiment-nlp.ipynb  README.md  pyproject.toml
