[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clearml>=2.0.2",
    "gensim>=4.4.0",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymorphy2>=0.9.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.1",
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
    "tqdm>=4.67.1",

]
